// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdoptionStatusBadge > renders 'CANCELLED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--gray"
    >
      <span>
        Cancelled
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        The adoption was cancelled before completion.
      </div>
    </div>
  </div>
</div>
`;

exports[`AdoptionStatusBadge > renders 'COMPLETED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--green"
    >
      <span>
        Completed
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        The adoption lifecycle has been completed.
      </div>
    </div>
  </div>
</div>
`;

exports[`AdoptionStatusBadge > renders 'CUSTODY_ACTIVE' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--green"
    >
      <span>
        Custody Active
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Pet custody is currently active.
      </div>
    </div>
  </div>
</div>
`;

exports[`AdoptionStatusBadge > renders 'DISPUTED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--red"
    >
      <span>
        Disputed
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        There is a dispute in the adoption.
      </div>
    </div>
  </div>
</div>
`;

exports[`AdoptionStatusBadge > renders 'ESCROW_CREATED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--gray"
    >
      <span>
        Escrow Created
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Escrow has been created but not funded yet.
      </div>
    </div>
  </div>
</div>
`;

exports[`AdoptionStatusBadge > renders 'ESCROW_FUNDED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--teal"
    >
      <span>
        Escrow Funded
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Funds have been deposited into escrow.
      </div>
    </div>
  </div>
</div>
`;

exports[`AdoptionStatusBadge > renders 'FUNDS_RELEASED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--green"
    >
      <span>
        Funds Released
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Funds have been released successfully.
      </div>
    </div>
  </div>
</div>
`;

exports[`AdoptionStatusBadge > renders 'SETTLEMENT_TRIGGERED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--amber"
    >
      <span>
        Settlement Triggered
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Settlement process has started.
      </div>
    </div>
  </div>
</div>
`;
